spec/test/_test_case_archive/sample2/data-error/3/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/3 error-3.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/3 ~
##### tecsgen error-3.idl  #####
error-3.idl:3:2: error: G1016 syntax error near 'int32'
1 error
~
